Update All numeric should right align Fixs

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -485,3 +485,7 @@ header {
   display: inline-block !important;
   text-align: right;
 }
+.alg-right{
+  text-align: right  !important;
+  display: block;
+}
